# datascience-for-ek

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.run/: p1.run.xml  p3.run.xml
common/: __init__.py  catchable.py
project1/: analysis.ipynb  example.ipynb  main.py  scrape.py  yahoo_api_client.py
project1/assets/: djia_max.csv  s&p500_max.csv  us_bonds_max.csv  vix_max.csv
project2/: analysis.ipynb  pyproject.toml
project2/assets/: bonds_data_clean.csv  djia_data_clean.csv  snp_data_clean.csv  vix_data_clean.csv
project3/: Makefile  catchable.py  constants.py  cpsat.py  evaluator.py  main.py  nanoreview_api_client.py  nanoreview_api_client_exception.py  nanoreview_info.py  pyproject.toml
project3/reference/: CP_SAT_Solver_example.py  CP_SAT_Solver_test.py  Pr1.xls  multi_criteria.py
project4/: another_test.py  audio_editor.py  ffmpeg_client.py  main.py  rezka_api_client.py  test.py  transcription.json  vosk_model.py  whisperx_model.py
