[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["eddienubes <cool.gegeg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
scrapy = "^2.11.1"
quantulum3 = {extras = ["classifier"], version = "^0.9.1"}
numpy = "^1.26.4"
yahooquery = "^2.3.7"
pandas = "^2.2.2"
jupyter = "^1.0.0"
python-dateutil = "^2.9.0.post0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.4.2"
statsforecast = "^1.7.4"
ortools = "^9.10.4067"
termcolor = "^2.4.0"
pyod = "^1.1.3"
pykalman = "^0.9.7"
filterpy = "^1.4.5"
hdrezkaapi = "^7.1.0"
ffmpeg-python = "^0.2.0"
vosk = "0.3.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
