[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["eddienubes <cool.gegeg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
scrapy = "^2.11.1"
quantulum3 = {extras = ["classifier"], version = "^0.9.1"}
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
